fixed #02874: fixed alignment issues for question text and moved some of the design markup out of the pstpl and into the CSS
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@6393 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/templates/default/template.css
+++ b/templates/default/template.css
@@ -13,6 +13,8 @@ color:#1d2d45;
 
 .questionhelp {
 font-size:10px;
+background-color:#eef6ff;
+text-align: center;
 }
 
 .success {
@@ -24,7 +26,7 @@ font-size:10px;
 font-size:11px;
 }
 
-.answertext {
+.answertext, .answer {
 text-align:left;
 }
 
@@ -123,6 +125,8 @@ font-family:verdana;
 font-family:verdana;
 font-size:12px;
 font-weight:bold;
+background-color: #eef6ff;
+text-align: left;
 }
 
 .questionhelp img {
